argocd/raw-projects/friendica-quakers-social/CronJob.yaml
---

# apiVersion: batch/v1
# kind: CronJob
# metadata:
#   name: hello
# spec:
#   schedule: "* * * * *"
#   jobTemplate:
#     spec:
#       template:
#         spec:
#           containers:
#           - name: hello
#             image: busybox:1.28
#             imagePullPolicy: IfNotPresent
#             command:
#             - /bin/sh
#             - -c
#             - date; echo Hello from the Kubernetes cluster
#           restartPolicy: OnFailure



apiVersion:               apps/v1
kind:                     Deployment
metadata:
  name:                   friendica-cron
  labels:
    app:                  friendica-cron
spec:
  replicas:               1
  selector:
    matchLabels:
      app:                friendica-cron
  # securityContext:
  #   runAsUser:            1000
  #   runAsGroup:           1000
  #   fsGroup:              1000
  #   fsGroupChangePolicy:  "Always"
  template:
    metadata:
      labels:
        app:              friendica-cron
    spec:
      containers:
      - name:             friendica-cron
        image:            friendica:2024.03-fpm-alpine
        readinessProbe:
          tcpSocket:
            port:         9000
          initialDelaySeconds: 15
          periodSeconds:  10
        ports:
        - containerPort:  9000
        resources:
          limits:
            memory:       200Mi
            cpu:          1
          requests:
            memory:       100Mi
            cpu:          100m
        command:
            - /cron.sh
        volumeMounts:
        - name:       friendica-system
          mountPath:  /var/www/html
      volumes:
      - name:         friendica-system
        persistentVolumeClaim:
          claimName:  friendica-system
