argocd/raw-projects/friendica-quakers-social/Deployment-app.yaml
---

#   app:
#     build: ./app
#     restart: always
#     volumes:
#       - friendica:/var/www/html
#     environment:
#       - FRIENDICA_ADMIN_MAIL=
#       - FRIENDICA_TZ=
#       - FRIENDICA_LANG=
#       - FRIENDICA_URL=
#       - FRIENDICA_SITENAME=
#       - SMTP=
#     env_file:
#       - db.env
#     depends_on:
#       - db

apiVersion:               apps/v1
kind:                     Deployment
metadata:
  name:                   friendica-app
  labels:
    app:                  friendica-app
spec:
  replicas:               1
  selector:
    matchLabels:
      app:                friendica-app
      app.kubernetes.io/name: friendica-app
  # securityContext:
  #   runAsUser:            1000
  #   runAsGroup:           1000
  #   fsGroup:              1000
  #   fsGroupChangePolicy:  "Always"
  template:
    metadata:
      labels:
        app:              friendica-app
        app.kubernetes.io/name: friendica-app
    spec:
      containers:
      - name:             friendica-app
        image:            friendica:2024.03-apache
        # image:            friendica:2024.03-fpm-alpine
        # securityContext:
        #   runAsUser:      1000
        #   allowPrivilegeEscalation: false
        # livenessProbe:
        #   httpGet:
        #     path:         /
        #     port:         80
        #   initialDelaySeconds: 15
        #   periodSeconds:  10
        # readinessProbe:
        #   tcpSocket:
        #     port:         80
        #   initialDelaySeconds: 15
        #   periodSeconds:  10
        ports:
        - name: http-web
          containerPort:  80
        resources:
          limits:
            memory:       300Mi
            cpu:          500m
          requests:
            memory:       100Mi
            cpu:          100m
        volumeMounts:
        - name:       friendica-system
          mountPath:  /var/www/html
      volumes:
      - name:         friendica-system
        persistentVolumeClaim:
          claimName:  friendica-system
