argocd/raw-projects/friendica-quakers-social/app.yaml
---

apiVersion:           apps/v1
kind:                 Deployment
metadata:
  name:               friendica-app
  labels:
    app:              friendica-app
spec:
  replicas:           1
  selector:
    matchLabels:
      app:            friendica-app
  securityContext:
    runAsUser: 1000
    runAsGroup: 1000
    fsGroup: 1000
    fsGroupChangePolicy: "Always"
  template:
    metadata:
      labels:
        app:          friendica-app
    spec:
      # initContainers:
      # - name:         friendica-app-init
      #   image:        olafradicke/friendica-app:0.5.1
      #   resources:
      #     limits:
      #       memory:   200Mi
      #       cpu:      1
      #     requests:
      #       memory:   100Mi
      #       cpu:      100m
      #   env:
      #   - name: RAILS_ENV
      #     value: "production"
      # #   command: ["rake", "db:migrate"]
      #   command: ["rails", "assets:precompile"]
      #   volumeMounts:
      #   - name:       friendica-system
      #     mountPath:  /home/friendica/.rbenv/live/public/system
      #   - name:       friendica-assets
      #     mountPath:  /home/friendica/.rbenv/live/public/assets
      #   - name:       secret-volume
      #     readOnly: true
      #     mountPath:  "/home/friendica/.rbenv/live/.env.production"
      #     subPath:    ".env.production"
      containers:
      - name:         friendica-app
        image:        olafradicke/friendica-app:4.2.8.10
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: false
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory:   200Mi
            cpu:      1
          requests:
            memory:   100Mi
            cpu:      100m
        volumeMounts:
        - name:       friendica-system
          mountPath:  /home/friendica/.rbenv/live/public/system
        - name:       friendica-assets
          mountPath:  /home/friendica/.rbenv/live/public/assets
        - name:       secret-volume
          readOnly: true
          mountPath:  "/home/friendica/.rbenv/live/.env.production"
          subPath:    ".env.production"
      volumes:
      - name:         friendica-system
        persistentVolumeClaim:
          claimName:  friendica-system
      - name:         friendica-assets
        persistentVolumeClaim:
          claimName:  friendica-assets
      - name:         secret-volume
        secret:
          secretName: friendica-env-production
