argocd/raw-projects/friendica-quakers-social/Service.yaml
---

apiVersion:         v1
kind:               Service
metadata:
  name:             friendica-app
spec:
  selector:
    app.kubernetes.io/name: friendica-app
  ports:
    - name:         http
      protocol:     TCP
      port:         8080
      targetPort:   http-web
