argocd/raw-projects/friendica-quakers-social/IngressRoute.yaml
---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     IngressRoute
metadata:
  name:                   friendica-the-independent-friend-de-ingressroute
spec:
  entryPoints:
                          - web
                          - websecure
  routes:
    - match:              Host(`friendica.the-independent-friend.de`) && PathPrefix(`/`)
      kind:               Rule
      services:
        - name:           friendica-app
          port:           8080
      middlewares:
        - name:           friendica-the-independent-friend-de
  tls:
    secretName:           friendica-the-independent-friend-de

---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     Middleware
metadata:
  name:                   friendica-the-independent-friend-de
spec:
  redirectScheme:
    scheme:               https
    permanent:            true
